--- a/app/src/main/res/drawable/topraduis_gray.xml
+++ b/app/src/main/res/drawable/topraduis_gray.xml
@@ -5,6 +5,6 @@
         />
     <corners
         android:topLeftRadius="6dp"
-        android:topRightRadius="6dp"
+        android:bottomLeftRadius="6dp"
         />
 </shape>
