--- a/app/src/main/res/drawable/bottomraduis_gray.xml
+++ b/app/src/main/res/drawable/bottomraduis_gray.xml
@@ -4,7 +4,7 @@
         android:color="@color/gray"
         />
     <corners
-        android:bottomLeftRadius="6dp"
+        android:topRightRadius="6dp"
         android:bottomRightRadius="6dp"
         />
 </shape>
