--- a/app/src/main/res/drawable/bottomraduis_white.xml
+++ b/app/src/main/res/drawable/bottomraduis_white.xml
@@ -4,7 +4,7 @@
         android:color="@color/white"
         />
     <corners
+       android:topRightRadius="6dp"
        android:bottomRightRadius="6dp"
-       android:bottomLeftRadius="6dp"
         />
 </shape>
