--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    android:id="@+id/main"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,12 +16,11 @@
 
     <LinearLayout
         android:id="@+id/linear_button"
-        android:layout_width="54dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="14dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/shape_model_bg"
         >
@@ -34,27 +35,27 @@
             android:scaleType="fitCenter"
              />
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:background="@color/gray"
 
             />
         <ImageView
-            android:id="@+id/louyu_collect"
+            android:id="@+id/line_collect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/selector_louyu"
+            android:src="@drawable/selector_xian"
             android:background="@drawable/btn_back_selector"
 
             android:padding="10dp"
             android:scaleType="fitCenter"/>
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:background="@color/gray"
 
             />
@@ -67,28 +68,12 @@
 
             android:padding="10dp"
             android:scaleType="fitCenter" />
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
-            android:background="@color/gray"
 
-            />
         <ImageView
-            android:id="@+id/jiaotong_collect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_cun"
-            android:background="@drawable/btn_back_selector"
-
-            android:padding="10dp"
-            android:scaleType="fitCenter"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:background="@color/gray"
             />
         <ImageView
@@ -112,10 +97,10 @@
         android:id="@+id/dingwei_collect"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="60dp"
         android:layout_marginLeft="14dp"
         android:src="@drawable/dingwei_icon_selector"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear_reduce"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
@@ -139,12 +124,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linear_reduce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:layout_marginLeft="14dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/dingwei_collect"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
         <ImageView
@@ -161,63 +147,40 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linear_tools_collect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <Button
-            android:id="@+id/baocun_collect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#878787"
-            android:text="保存" />
-
-        <Button
-            android:id="@+id/houtui_collect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-            android:background="#878787"
-            android:text="后退" />
-
-        <Button
-            android:id="@+id/chanel_collect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-            android:background="#878787"
-            android:text="取消" />
-    </LinearLayout>
 
 
     <ImageView
         android:id="@+id/btn_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/selector_caidan"
         android:padding="10dp"
         android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
-    <SeekBar
+    <com.xw.repo.BubbleSeekBar
         android:id="@+id/seek_collect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="14dp"
         android:layout_marginTop="20dp"
-        android:max="200"
-        android:min="20"
-        app:layout_constraintRight_toLeftOf="@+id/linear_button"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear_button"
+        app:bsb_max="200"
+        app:bsb_min="10"
+        app:bsb_progress="10"
+        app:bsb_section_count="5"
+        app:bsb_section_text_position="bottom_sides"
+        app:bsb_show_progress_in_float="true"
+        app:bsb_show_section_mark="true"
+        app:bsb_show_section_text="true"
+        app:bsb_show_thumb_text="true"
+        app:bsb_bubble_text_color="@color/colorPrimaryDark"
+        app:bsb_second_track_color="#ff0000"
         />
 
 </android.support.constraint.ConstraintLayout>
