--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -23,6 +23,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/shape_model_bg"
+        android:layout_marginTop="5dp"
         >
 
         <ImageView
@@ -91,7 +92,11 @@
         android:id="@+id/iv_compass"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@drawable/ic_compass" />
+        android:src="@drawable/ic_compass"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="60dp"
+        />
 
     <ImageView
         android:id="@+id/dingwei_collect"
