优化采集poi条目

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -30,6 +30,7 @@
     </string-array>
 
     <string-array name="poi_mjdj">
+        <item>请选择</item>
         <item>3A</item>
         <item>4A</item>
         <item>5A</item>
