采集界面改为activityDialog，上传数据修改

--- a/app/src/main/res/layout/activity_poi_detail.xml
+++ b/app/src/main/res/layout/activity_poi_detail.xml
@@ -57,7 +57,7 @@
                     style="@style/HintText"
                     android:text="名称" />
 
-                <com.mapuni.gdydcaiji.view.ClearEditText
+                <AutoCompleteTextView
                     android:id="@+id/et_lyName"
                     style="@style/CollectEditText"
                     android:singleLine="false" />
