--- a/app/src/main/res/layout/activity_line_detail.xml
+++ b/app/src/main/res/layout/activity_line_detail.xml
@@ -28,7 +28,7 @@
                     style="@style/HintText"
                     android:text="名称" />
 
-                <com.mapuni.gdydcaiji.view.ClearEditText
+                <AutoCompleteTextView
                     android:id="@+id/et_name"
                     style="@style/CollectEditText" />
 
