--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/title_height"
-                android:background="@color/loginNormal"
-                android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/title_height"
+    android:background="@color/loginNormal"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@id/back"
         android:layout_width="48dp"
         android:layout_height="match_parent"
         android:padding="14dp"
-        android:src="@drawable/selector_back"/>
+        android:src="@drawable/selector_back"
+        android:visibility="gone" />
 
     <TextView
-        android:id="@id/title"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
@@ -23,7 +24,7 @@
         android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="18sp"
-        tools:text="标题"/>
+        tools:text="标题" />
 
     <TextView
         android:id="@id/edit"
@@ -38,6 +39,6 @@
         android:text="编辑"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
