t图标大小修改

--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -28,8 +28,8 @@
 
         <ImageView
             android:id="@+id/poi_collect"
-            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+            android:layout_width="40dp"
+           android:layout_height="40dp"
             android:src="@drawable/selector_poi"
             android:background="@drawable/topraduis_selector"
             android:padding="10dp"
@@ -45,8 +45,8 @@
             />
         <ImageView
             android:id="@+id/line_collect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/selector_xian"
             android:background="@drawable/btn_back_selector"
 
@@ -62,8 +62,8 @@
             />
         <ImageView
             android:id="@+id/newploygon_collect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/selector_mian"
             android:background="@drawable/btn_back_selector"
 
@@ -79,8 +79,8 @@
             />
         <ImageView
             android:id="@+id/selectpoint_collect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/selector_fanwei"
             android:background="@drawable/bottomraduis_selector"
             android:padding="10dp"
