--- a/app/src/main/res/layout/ppw_menu.xml
+++ b/app/src/main/res/layout/ppw_menu.xml
@@ -24,12 +24,13 @@
         android:text="选择地图" />
 
     <TextView
-    android:id="@+id/tv_copy_bd"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:gravity="center"
-    android:text="备份" />
+        android:id="@+id/tv_copy_bd"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="备份" />
+
     <TextView
         android:id="@+id/tv_bz"
         android:layout_width="match_parent"
@@ -37,5 +38,13 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="标注设置" />
+
+    <TextView
+        android:id="@+id/tv_zj"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="质检" />
 
 </android.support.v7.widget.LinearLayoutCompat>
