--- a/app/src/main/res/layout/activity_social_detail.xml
+++ b/app/src/main/res/layout/activity_social_detail.xml
@@ -22,6 +22,14 @@
             app:divider="@drawable/shape_divider"
             app:showDividers="middle">
 
+            <TextView
+                android:id="@+id/tv_zjjgzs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textColor="@color/color_red"
+                android:visibility="gone" />
+            
             <LinearLayout style="@style/HorizontalLinearLayout">
 
                 <TextView
@@ -133,6 +141,22 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_zj"
+                style="@style/HorizontalLinearLayout"
+                android:visibility="gone">
+
+                <TextView
+                    style="@style/HintText"
+                    android:text="质检结果" />
+
+                <com.mapuni.gdydcaiji.view.ClearEditText
+                    android:id="@+id/et_zjjg"
+                    style="@style/CollectEditText"
+                    android:singleLine="false" />
+
+            </LinearLayout>
+            
             <Button
                 android:id="@+id/btn_save"
                 style="?android:attr/borderlessButtonStyle"
